Dispatch workflow on deploying and various improvements
