# server/application-server/src/main/java/de/tum/cit/aet/helios/deployment/github/GitHubDeploymentSyncService.java
@@ -127,7 +127,7 @@ public class GitHubDeploymentSyncService {
         deploymentConverter.update(deploymentSource, deployment);
 
         // Set the associated environment
-        deployment.setEnvironmentEntity(environment);
+        deployment.setEnvironment(environment);
         // Set the repository
         deployment.setRepository(gitRepository);
 
@@ -140,8 +140,18 @@ public class GitHubDeploymentSyncService {
 
         optionalPullRequest.ifPresent(deployment::setPullRequest);
 
-
         // Save the deployment
         deploymentRepository.save(deployment);
+
+        // TODO: This is a temporary solution to set the deploying flag
+        // we should find a better way to handle this
+        if (environment.isDeploying()) {
+            environment.setDeploying(
+                deployment.getState() == Deployment.State.PENDING ||
+                deployment.getState() == Deployment.State.IN_PROGRESS ||
+                deployment.getState() == Deployment.State.QUEUED
+            );
+            environmentRepository.save(environment);
+        }
     }
 }
