# server/application-server/src/main/java/de/tum/cit/aet/helios/environment/Environment.java
@@ -5,10 +5,12 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
-
+import de.tum.cit.aet.helios.branch.Branch;
+import de.tum.cit.aet.helios.deployment.Deployment;
 import de.tum.cit.aet.helios.gitrepo.GitRepository;
 
 import java.time.OffsetDateTime;
+import java.util.List;
 
 @Entity
 @Table(name = "environment")
@@ -17,7 +19,6 @@ import java.time.OffsetDateTime;
 @NoArgsConstructor
 @ToString
 public class Environment {
-
     @Id
     private Long id;
 
@@ -39,8 +40,22 @@ public class Environment {
     @JoinColumn(name = "repository_id", nullable = false)
     private GitRepository repository;
 
-    // Missing properties
-    // nodeId --> GraphQl ID
-    // ProtectionRule
-    // DeploymentBranchPolicy
+    @Version
+    private Integer version;
+
+    @OneToMany(fetch = FetchType.EAGER, mappedBy = "environment")
+    private List<Deployment> deployments;
+
+    private boolean deploying;
+
+    @ManyToOne
+    @JoinColumns({
+            @JoinColumn(name = "locking_repository_id", referencedColumnName = "repository_id"),
+            @JoinColumn(name = "locking_branch_name", referencedColumnName = "name")
+    })
+    private Branch lockingBranch;
+
+    public boolean isLocked() {
+        return lockingBranch != null;
+    }
 }
